--- a/movie_recommendation_system.ipynb
+++ b/movie_recommendation_system.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN82IQWcd0U4+5fi3IPqWcm",
+      "authorship_tag": "ABX9TyMnj7ZGSWxvVf/1UgXkXA+D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2552,7 +2552,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 382
+          "height": 402
         },
         "id": "T3eSsZCbvswl",
         "outputId": "887265db-a3c9-4ee2-9100-dd30061d3ff3"
@@ -5032,59 +5032,55 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- Create a reccomender function ---\n",
-        "def recommend(movie_name):\n",
-        "    distances, indices = model.kneighbors(movies.loc[movie_name,:].values.reshape(1, -1), n_neighbors=6)\n",
-        "    results = []\n",
-        "    for i in range(0, len(distances.flatten())):\n",
-        "        if(i==0):\n",
-        "            pass\n",
-        "        else:\n",
-        "            results.append(movies.index[indices.flatten()[i]])\n",
-        "    return results"
+        "# --- Create a reccomender for deployment ---\n",
+        "class MovieRecommender:\n",
+        "    def __init__(self, features_matrix, movie_index):\n",
+        "        self.model = NearestNeighbors(metric=\"cosine\", algorithm=\"brute\")\n",
+        "        self.model.fit(features_matrix)\n",
+        "        self.movies = movie_index  # movie_index = DataFrame or Series indexed by movie names\n",
+        "\n",
+        "    def recommend(self, movie_name, n=6):\n",
+        "        if movie_name not in self.movies.index:\n",
+        "            return [\"Movie not found\"]\n",
+        "\n",
+        "        query_vector = self.movies.loc[movie_name, :].values.reshape(1, -1)\n",
+        "        distances, indices = self.model.kneighbors(query_vector, n_neighbors=n)\n",
+        "\n",
+        "        results = []\n",
+        "        for i in range(1, len(distances.flatten())):\n",
+        "            results.append(self.movies.index[indices.flatten()[i]])\n",
+        "        return results"
       ],
       "metadata": {
         "id": "osK7mv65FJdK"
       },
-      "execution_count": 52,
+      "execution_count": 56,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(recommend('The Dark Knight Rises'))"
+        "recommender = MovieRecommender(features_matrix, movies)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jUZCE-3LJA0J",
-        "outputId": "353d1228-5b59-4f52-8e2e-366cff8569df"
+        "id": "jUZCE-3LJA0J"
       },
-      "execution_count": 53,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['Batman Begins', 'The Dark Knight', 'Interstellar', 'Inception', 'The Prestige']\n"
-          ]
-        }
-      ]
+      "execution_count": 57,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(recommend('Avatar'))"
+        "print(recommender.recommend('Avatar'))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xZTadQpsJFg7",
-        "outputId": "5ca59927-cc2b-4ae8-baeb-b6e5ab33f95e"
+        "outputId": "c8a8d8ca-e971-4261-8a26-10d098e21401"
       },
-      "execution_count": 54,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -5099,16 +5095,16 @@
       "cell_type": "code",
       "source": [
         "import joblib\n",
-        "joblib.dump(model, 'model.pkl')"
+        "joblib.dump(recommender, 'model.pkl')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Me0SmiiDJIf1",
-        "outputId": "74a8411d-7a92-4b31-b39a-4b3ef3db2642"
+        "outputId": "cf79c5df-8fa0-44c1-bd3b-28cdc21b3cc5"
       },
-      "execution_count": 55,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5118,7 +5114,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 59
         }
       ]
     },
